--- a/amateur/index.html
+++ b/amateur/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en-US" id="amateur" >
     <head>
         <meta charset="UTF-8">
@@ -15,19 +16,19 @@
             <h2 class="subtitle" id="Cooking">
                 Cooking
             </h2>
-            <p class="explanation" id="explanation 1">
+            <p class="explanation" id="explanation1">
                 As a foodie, my top interest is cooking. Chinese food is my best dish, and I'm also good at baking.
             </p>
-            <img src="img/basque.jpg" alt="Basque Cheesecake" width="450" height="300">
-            <p id="Basque Cheesecake">--Basque Cheesecake--</p>
-            <img src="img/buttermilk.jpg" alt="Buttermilk Bread" width="450" height="300">
-            <p id="Buttermilk Bread">--Buttermilk Bread--</p>
+            <img src="img/basque.jpg" alt="Basque_Cheesecake" width="450" height="300">
+            <p id="Basque_Cheesecake">--Basque Cheesecake--</p>
+            <img src="img/buttermilk.jpg" alt="Buttermilk_Bread" width="450" height="300">
+            <p id="Buttermilk_Bread">--Buttermilk Bread--</p>
             <img src="img/zongzi.jpg" alt="Zongzi" width="450" height="300">
             <p id="Zongzi">--Traditional Chinese Food Zongzi for Dragon Boat Festival--</p>   
             <h2 class="subtitle" id="KPOP">
                 K-POP
             </h2>
-            <p class="explanation" id="explanation 2">
+            <p class="explanation" id="explanation2">
                 I have been learning Korean for years and am really into K-POP. I went to several K-POP concerts in Chicago last year. I'm a stan for BTS these days.
             </p>
             <img src="img/concert.jpg" alt="Concert" width="250" height="300">
@@ -36,12 +37,9 @@
             </p>
         </main>
         <footer>
-            <p>
-                <a href="/Users/Yeon/Downloads/project_one/index.html"> 
-                    <input type ="button" value="Home">
-                    </input>
-                </a>
-            </p>
+           <a href="/Users/Yeon/Downloads/Projects/project_one/index.html">
+                Home
+           </a>
         </footer>
     </body>
 </html>
