--- a/pets/index.html
+++ b/pets/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en-US" id="Pets">
     <head>
         <meta charset="UTF-8">
@@ -15,43 +16,40 @@
             <h3 id="Huey">
                 Huey
             </h3>
-            <p　class="explanation" id="explanation 1"> 
+            <p id="explanation1"> 
                 My dog's name is Huey, he is a 3-year-old white toy poodle. 
             </p>
-            <p class="explanation" id="explanation 2">
+            <p id="explanation2">
                 I first met him when he was four-month-old in 2017. Because my friends used to call me Daisy, so I named him after one of Donald Duck's nephews.   
             </p>  
             <img src="img/huey.jpg" alt="Huey" width="220" height="300">
             <h3 id="Maui">
                 Maui
             </h3>
-            <p class="explanation" id="explanation 3">
+            <p id="explanation3">
                 My cat's name is Maui, he is a 5-year-old tabby Domestic Shorthair cat. 
             </p>
-            <p class="explanation" id="explanation 4">
+            <p id="explanation4">
                 I adopted him on my birthday when I was in Iowa in 2018. 
                 He was in the adoption center of a Petco store and I was dropping by to grab some food for my dog. 
                 Our encounter is like destiny and I fell in love with him at the first sight. 
             </p>    
             <img src="img/maui.jpg" alt="Maui" width="220" height="300">
-            <p class="explanation" id="explanation 5">
+            <p id="explanation5">
                 I can't say they like each other, but they seem ok to have each other in their lives.
             </p>
             <img src="img/1.jpg" alt="Together1" width="250" height="300">
             <img src="img/2.jpg" alt="Together2" width="400" height="300">
             <img src="img/3.jpg" alt="Together3" width="250" height="300">
-            <p class="explanation" id="explanation 6">
+            <p id="explanation6">
                 Although sometimes they do fight.
             </p>
             <img src="img/4.jpg" alt="Together4" width="250" height="300">
         </main>
         <footer>
-            <p id="footer">
-                <a href="/Users/Yeon/Downloads/project_one/index.html"> 
-                    <input type ="button" value="Home">
-                    </input>
-                </a>
-            </p>
-        </footer>
+            <a href="/Users/Yeon/Downloads/Projects/project_one/index.html">
+                 Home
+            </a>
+         </footer>
     </body>
 </html>
