--- a/resume/index.html
+++ b/resume/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en" id="resume">
     <head>
         <meta charset="utf-8">
@@ -24,37 +25,37 @@
             </p>
         </header>
         <main id="Container">
-            <h4 class="section" id="work experience">
+            <h4 class="section" id="work_experience">
                 <strong>
                     <u>
                         WORK EXPERIENCE
                     </u>
                 </strong>
             </h4>
-            <p class="title" id="business analyst">
+            <p id="business_analyst">
                 <b>
                     Business Analyst
                 </b>
             </p>
-            <p class="company" id="company 1">
+            <p id="company1">
                 Supernova Lending, LLC
             </p>
-            <p class="time" id="time 1">
+            <p id="time1">
                 <i>
                     03/2019 - current
                 </i>
             </p>
-            <p class="location" id="location 1">
+            <p id="location1">
                 <i>
                     Chicago, IL
                 </i>
             </p>
-            <p class="tag">
+            <p>
                 <i>
                     Achievement/Tasks
                 </i>
             </p>
-            <p class="achievement" id="achievement 1">
+            <ul id="achievement1">
                 <li>
                     Negotiate with clients on product requirements & development scale
                 </li>
@@ -67,31 +68,31 @@
                 <li>
                     Provided quality assurance support for products in testing environments and troubleshot system bugs
                 </li>  
-            </p> 
-            <p class="title" id="data analyst">
+            </ul> 
+            <p id="data_analyst">
                 <b>
                     Data Analyst
                 </b>
             </p>
-            <p class="company" id="company 2">
+            <p id="company2">
                 XCG Design Corp
             </p>
-            <p class="time" id="time 2">
+            <p id="time2">
                 <i>
                     09/2017 - 02/2019
                 </i>
             </p>
-            <p class="location" id="location 2">
+            <p id="location2">
                 <i>
                     Cambridge, MA
                 </i>
             </p>
-            <p class="tag">
+            <p>
                 <i>
                     Achievement/Tasks
                 </i>
             </p>
-            <p class="achievement" id="achievement 2">
+            <ul id="achievement2">
                 <li>
                     Collected, cleansed data from various sources, including databases, manual files, and external websites
                 </li>
@@ -101,31 +102,31 @@
                 <li>
                     Create visually impactful dashboards in Excel and Tableau for data reporting by using pivot tables and VLOOKUP
                 </li>  
-            </p>    
-            <p class="title" id="Actuarial Internship">
+            </ul>    
+            <p id="Actuarial_Internship">
                 <b>
                     Actuarial Internship
                 </b>
             </p>
-            <p class="company" id="company 3">
+            <p id="company3">
                 New China Life Insurance Company LTD
             </p>
-            <p class="time" id="time 3">
+            <p id="time3">
                 <i>
                     07/2014 - 09/2014
                 </i>
             </p>
-            <p class="location" id="location 3">
+            <p id="location3">
                 <i>
                     Beijing, China
                 </i>
             </p>
-            <p class="tag">
+            <p>
                 <i>
                     Achievement/Tasks
                 </i>
             </p>
-            <p class="achievement" id="achievement 3">
+            <ul id="achievement3">
                 <li>
                     Built insurance coverage and reserve fund models using Microsoft Excel
                 </li>
@@ -135,7 +136,7 @@
                 <li>
                     Assisted in completing a mortality study using Excel
                 </li>   
-            </p>       
+            </ul>       
             <h4 class="section" id="education">
                 <strong>
                     <u>
@@ -143,82 +144,84 @@
                     </u>
                 </strong>
             </h4>
-            <p class="degree" id="degree 1">
+            <p id="degree1">
                 <b>
                     M.A.S in Information Technology and Management
                 </b>
             </p>
-            <p class="school" id="school 1">
+            <p id="school1">
                 Illinois Institute of Technology
             </p>
-            <p class="time" id="time 4">
+            <p id="time4">
                 <i>
                     08/2020 - current
                 </i>
             </p>
-            <p class="location" id="location 4">
+            <p id="location4">
                 <i>
                     Chicago, IL
                 </i>
             </p>
-            <p class="degree" id="degree 2">
+            <p id="degree2">
                 <b>
                     M.S in Actuarial Science
                 </b>
             </p>
-            <p class="school" id="school 2">
+            <p id="school2">
                 The University of Iowa
             </p>
-            <p class="time" id="time 5">
+            <p id="time5">
                 <i>
                     08/2015 - 05/2017
                 </i>
             </p>
-            <p class="location" id="location 5">
+            <p id="location5">
                 <i>
                     Iowa City, IA
                 </i>
             </p>
-            <p class="degree" id="degree 3">
+            <p id="degree3">
                 <b>
                     B.A in Finance (Actuarial Science)
                 </b>
             </p>
-            <p class="school" id="school 3">
+            <p id="school3">
                 Jilin University
             </p>
-            <p class="time" id="time 6">
+            <p id="time6">
                 <i>
                     09/2011 - 07/2015
                 </i>
             </p>
-            <p class="location" id="location 6">
+            <p id="location6">
                 <i>
                     Changchun, Jilin, China
                 </i>
             </p>
-            <h4 class="section" id="actuarial exams">
+            <h4 class="section" id="actuarial_exams">
                 <strong>
                     <u>
                         ACTUARIAL EXAMS
                     </u>
                 </strong>
             </h4>
-            <p class="exam" id="exam 1">
-                Exam P
-            </p>
-            <p class="exam" id="exam 2">
-                Exam FM
-            </p>
-            <p class="exam" id="exam 3">
-                Exam MFE
-            </p>
-            <p class="exam" id="exam 4">
-                Exam C
-            </p>
-            <p class="exam" id="exam 5">
-                Exam MLC
-            </p>
+            <ul>
+                <li>
+                    Exam P
+                </li>
+                <li>
+                    Exam FM
+                </li>
+                <li>
+                    Exam MFE
+                </li>
+                <li>
+                    Exam C
+                </li>
+                <li>
+                    Exam MLC
+                </li>
+            </ul>
             <h4 class="section" id="skills">
                 <strong>
                     <u>
@@ -226,124 +229,126 @@
                     </u>
                 </strong>
             </h4>
-            <p class="skill" id="skill 1">
-                Responsibility
-            </p>
-            <p class="skill" id="skill 2">
-                Teamwork
-            </p>
-            <p class="skill" id="skill 3">
-                Problem solving
-            </p>
-            <p class="skill" id="skill 4">
-                Time Management
-            </p>
-            <p class="skill" id="skill 5">
-                Project Management
-            </p>
-            <p class="skill" id="skill 6">
-                Organization
-            </p>
-            <p class="skill" id="skill 7">
-                Attention to details
-            </p>
-            <p class="skill" id="skill 8">
-                Quick learner
-            </p>
-            <h4 class="section" id="additional activities">
+            <ul>
+                <li>
+                    Responsibility
+                </li>
+                <li>
+                    Teamwork
+                </li>
+                <li>
+                    problem solving
+                </li>
+                <li>
+                    Time management
+                </li>
+                <li>
+                    Project management
+                </li>
+                <li>
+                    Organization
+                </li>
+                <li>
+                    Attention to details
+                </li>
+                <li>
+                    Quick learner
+                </li>
+            </ul>
+            <h4 class="section" id="additional_activities">
                 <strong>
                     <u>
                         ADDITIONAL ACTIVITIES
                     </u>
                 </strong>
             </h4>
-            <p class="activity" id="activity 1">
+            <p id="activity1">
                 <b>
                     Volunteer
                 </b>
             </p>
-            <p class="organization" id="organization 1">
+            <p id="organization1">
                 Feral Fixer
             </p>
-            <p class="time" id="time 7">
+            <p id="time7">
                 <i>
                     05/2019 - 11/2019
                 </i>
             </p>
-            <p class="location" id="location 7">
+            <p id="location7">
                 <i>
                     Itasca, IL
                 </i>
             </p>
-            <p class="tag">
+            <p>
                 <i>
                     Achievement/Tasks
                 </i>
             </p>
-            <p class="achievement" id="achievement 4">
+            <ul id="achievement4">
                 <li>
                    Took care of homeless kittens and helped with their socialization
                 </li>
-            </p>  
-            <p class="activity" id="activity 2">
+            </ul>  
+            <p id="activity2">
                 <b>
                     Proctor
                 </b>
             </p>
-            <p class="organization" id="organization 2">
+            <p id="organization2">
                 The University of Iowa Distance and Online Education Department
             </p>
-            <p class="time" id="time 8">
+            <p id="time8">
                 <i>
                     10/2016 - 05/2017
                 </i>
             </p>
-            <p class="location" id="location 8">
+            <p id="location8">
                 <i>
                     Iowa City, IA
                 </i>
             </p>
-            <p class="tag">
+            <p>
                 <i>
                     Achievement/Tasks
                 </i>
             </p>
-            <p class="achievement" id="achievement 5">
+            <ul id="achievement5">
                 <li>
                     Helped testers check in and out, proctored the exams ,filed and organized paperworks
                 </li>
-            </p> 
-            <p class="activity" id="activity 3">
+            </ul> 
+            <p id="activity3">
                 <b>
                     Part-time Staff
                 </b>
             </p>
-            <p class="organization" id="organization 3">
+            <p id="organization3">
                 Wanda Cinema Line
             </p>
-            <p class="time" id="time 9">
+            <p id="time9">
                 <i>
                     09/2014 - 03/2015
                 </i>
             </p>
-            <p class="location" id="location 9">
+            <p id="location9">
                 <i>
                     Changchun, Jilin, China
                 </i>
             </p>
-            <p class="tag">
+            <p>
                 <i>
                     Achievement/Tasks
                 </i>
             </p>
-            <p class="achievement" id="achievement 6">
+            <ul id="achievement6">
                 <li>
                     Worked in customer service department and sales department and won the best employee and the best seller of the month
                 </li>
                 <li>
                     Worked as a team leader and supervised a shift of ten employees, trained new employees
                 </li>
-            </p>        
+            </ul>        
             <h4 class="section" id="language">
                 <strong>
                     <u>
@@ -351,30 +356,32 @@
                     </u>
                 </strong>
             </h4>
-            <p class='language' id="language 1">
-                <b>
-                    English
-                </b>
-            </p>
-            <p class="proficiency" id="proficiency 1">
-                Full Professional Proficiency
-            </p>
-            <p class='language' id="language 2">
-                <b>
-                    Chinese
-                </b>
-            </p>
-            <p class="proficiency" id="proficiency 2">
-                Full Professional Proficiency
-            </p>
-            <p class='language' id="language 3">
-                <b>
-                    Korean
-                </b>
-            </p>
-            <p class="proficiency" id="proficiency 3">
-                Limited Working Proficiency
-            </p>
+            <ul>
+                <li>
+                    <b>
+                        English
+                    </b>
+                    <p>
+                        Full Professional Proficiency
+                    </p>
+                </li>
+                <li>
+                    <b>
+                        Chinese
+                    </b>
+                    <p>
+                        Full Professional Proficiency
+                    </p>
+                </li>
+                <li>
+                    <b>
+                        Korean
+                    </b>
+                    <p>
+                        Limited Working Proficiency
+                    </p>
+                </li>
+            </ul>
             <h4 class="section" id="software">
                 <strong>
                     <u>
@@ -382,35 +389,34 @@
                     </u>
                 </strong>
             </h4>
-            <p class="software" id="software 1">
-                JAVA
-            </p>
-            <p class="software" id="software 2">
-                HTML
-            </p>
-            <p class="software" id="software 3">
-                SQL
-            </p>
-            <p class="software" id="software 4">
-                R
-            </p>
-            <p class="software" id="software 5">
-                SAS
-            </p>
-            <p class="software" id="software 6">
-                JIRA
-            </p>
-            <p class="software" id="software 7">
-                MS Office
-            </p>
+            <ul>
+                <li>
+                    JAVA
+                </li>
+                <li>
+                    HTML
+                </li>
+                <li>
+                    SQL
+                </li>
+                <li>
+                    R
+                </li>
+                <li>
+                    SAS
+                </li>
+                <li>
+                    JIRA
+                </li>
+                <li>
+                    MS Office
+                </li>
+            </ul>
         </main>
         <footer>
-            <p class="footer">
-                <a href="/Users/Yeon/Downloads/project_one/index.html"> 
-                    <input type ="button" value="Home">
-                    </input>
-                </a>
-            </p>  
-        </footer>
+            <a href="/Users/Yeon/Downloads/Projects/project_one/index.html">
+                 Home
+            </a>
+         </footer>
     </body>
 </html>
